objects/Milliman_Project_Relationship__c.object
<CustomObject>
    <description>Container for connecting delivery projects to Milliman workstreams</description>
    <fields>
        <fullName>Milliman_Project_Relationship_Notes__c</fullName>
        <label>Milliman Project Relationship Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <inlineHelpText>Advisory Board Project associated with a Milliman workstream</inlineHelpText>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Milliman Project Relationships</relationshipLabel>
        <relationshipName>Milliman_Project_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Workstream__c</fullName>
        <inlineHelpText>Connector to the specific Milliman workstream that this project is associated with</inlineHelpText>
        <label>Workstream</label>
        <referenceTo>Workstream__c</referenceTo>
        <relationshipLabel>Advisory Board Implementation Projects</relationshipLabel>
        <relationshipName>Milliman_Project_Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Milliman Project Relationship</label>
    <nameField>
        <displayFormat>Milliman-{00000}</displayFormat>
        <label>Milliman Implementation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milliman Project Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>